# Wideband-LNA

./: .gitignore  README.md  Regulator Design.ods  TCCH-80+_AP190595_S_PARAM_U1_0mA.s2p  TCCH-80+_AP190595_S_PARAM_U1_100mA.s2p  TCCH-80+_AP190595_S_PARAM_U2_0mA.s2p  TCCH-80+_AP190595_S_PARAM_U2_100mA.s2p  Wideband LNA Datasheet.odt  Wideband-LNA.kicad_pcb  Wideband-LNA.kicad_pro  Wideband-LNA.kicad_sch  fp-lib-table  sym-lib-table  wa1hco.kicad_sym
Design and Test/: BOM Priced.ods  Wideband-LNA.ods  nfa_extract.py
jlcpcb/: project.db
jlcpcb/gerber/: Wideband-LNA-CuBottom.gbr  Wideband-LNA-CuIn1.gbr  Wideband-LNA-CuIn2.gbr  Wideband-LNA-CuTop.gbr  Wideband-LNA-EdgeCuts.gbr  Wideband-LNA-MaskBottom.gbr  Wideband-LNA-MaskTop.gbr  Wideband-LNA-NPTH.drl  Wideband-LNA-PTH.drl  Wideband-LNA-SilkBottom.gbr  Wideband-LNA-SilkTop.gbr
test/lna_bench/: .gitignore  README.md  probe_scpi.py  pyproject.toml
test/lna_bench/config/: station.example.toml
test/lna_bench/src/lna_bench/: __main__.py  cli.py  config.py  gui_streamlit.py  models.py  process_guard.py  reporting.py  reporting_compact.py  storage.py  transport.py
test/lna_bench/src/lna_bench/instruments/: n8973a.py
test/lna_bench/tests/: test_config.py  test_gui.py
uSimmics/: PGA-103.sch  S2P_plot.m  TQP3m9036.sch  TQP3m9037.sch  TQP3m9037_T.sch
wa1hco.pretty/: DFN-8-1EP_2x2mm_P0.5mm_EP0.8x1.6mm_via.kicad_mod  DQ849.kicad_mod  MountingHole_M2.kicad_mod  SMA_Amphenol_132289_EdgeMount.kicad_mod  SMA_Connector_Pin.kicad_mod  TCCH-80+.kicad_mod  USB_C_Receptacle_G-Switch_GT-USB-7010ASV.kicad_mod
(+20 files in other folders)
