[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lna-bench"
version = "0.1.0"
description = "Bench automation for N8973A-based LNA characterization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyvisa>=1.14",
    "streamlit>=1.35",
]

[project.scripts]
lna-bench = "lna_bench.cli:main"
lna-bench-gui = "lna_bench.gui_streamlit:launch"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
